Remove large model files to comply with GitHub size limits
- Updated .gitignore to exclude *.pkl files
- Model files are too large for GitHub (600+ MB)
- Application will retrain models automatically when run

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,9 @@ Thumbs.db
 # Streamlit
 .streamlit/
 
-# Machine Learning Models (keep the ones you want to share)
-# *.pkl
+# Machine Learning Models (too large for GitHub)
+*.pkl
+models/*.pkl
 
 # Logs
 *.log
